--- a/style.css
+++ b/style.css
@@ -159,3 +159,9 @@ transition: 2s;
 	font-size: 30px;
 	margin-top: 50px;
 }
+
+@media only screen and (max-width: 600px) {
+	body {
+	  display: none;
+	}
+  }
