--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*web ver*/
 body{
 
 	padding: 0;
@@ -160,8 +161,126 @@ transition: 2s;
 	margin-top: 50px;
 }
 
-@media only screen and (max-width: 600px) {
-	body {
-	  display: none;
+/*Mobile ver*/
+@media only screen and (max-width: 400px) {
+	body{
+
+		padding: 0;
+		margin: 0;
+		display: grid;
+		justify-content: center;
+		align-items: center;
+		background-color: #333;
+	}
+	
+
+	#container{
+	
+		margin-top: 90px;
+		box-shadow: none;
+		padding:50px;
+		display: grid;
+		width: auto;
+		height: auto;
+		animation: none;
+	
+
+	}
+	
+	}
+	
+	.Answerr{
+		font-family: Impact;
+		font-size: 50px;	
+		transition:4s;
+	
+	}
+	
+	.Main{
+		font-size:auto;
+		font-family: lucida console;}
+	
+	span{display: inline;
+	margin:auto;
+	padding:auto;
+	font-size: 50px;
+
+	}
+	
+
+	
+	.In{
+		display:inline;
+		border-bottom: 3px solid black;
+		background-color:#333;
+		text-align: center;
+
+	}
+	
+	.btn{
+		width: 100px;
+		height:50px;
+		border-radius: 6px;
+		display: inline;
+		font-family:arial;
+		border:none;
+		background-color: black;
+		color:white;	
+	
+	}
+	.btn:hover{
+		cursor: pointer;
+		box-shadow:0 0 10px skyblue,0 0 10px skyblue,0 0 10px skyblue,0 0 10px skyblue;
+		background-color: white;
+	}
+	
+	
+	/* modal */
+	.bg-modal{
+		display: inline;
+		width:auto;
+		height:auto;
+		background-color:black;
+		opacity: 0.7;
+		position: absolute;
+		top:0;
+		left:0;
+		display:none;
+
+	}
+	.modal-content{
+		
+		width: 50%;
+		height: 50%;
+		background-color: white;
+		display: grid;
+		grid-template-columns: 1fr;
+		align-content: center;
+	
+
+	
+	
+	}
+	
+
+	#modal-button{
+		margin:auto;
+		padding: auto;
+	
+		border-top: none;
+		border-left: none;
+		border-right: none;
+		border-bottom: 4px solid black;
+		font-family: calibri;
+		background-color:white;
+		color:black; 
+		cursor: pointer;
+
+	}
+	#modal-text{
+	
+		font-family: Brush Script Std;
+		font-size: auto;
+		
 	}
   }
