--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ transition: 2s;
 		justify-content: center;
 		align-items: center;
 		background-color: #333;
+		animation:none;
 	}
 	
 
@@ -204,7 +205,8 @@ transition: 2s;
 	margin:auto;
 	padding:auto;
 	font-size: 50px;
-
+	animation: none;
+	text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
 	}
 	
 
